--- a/packages/ckeditor5-html-support/tests/manual/image.html
+++ b/packages/ckeditor5-html-support/tests/manual/image.html
@@ -6,17 +6,11 @@
 <style>
 	[contenteditable="true"] [data-validation-allow] {
 		border: 1px solid blue !important;
+		display: inherit;
 	}
 
 	[contenteditable="true"] [data-validation-disallow] {
 		border: 1px solid red !important;
-	}
-
-	code {
-		background-color: rgb(226, 226, 226);
-		border: 1px solid rgb(226, 226, 226);
-		border-radius: 3px;
-		padding: 0 3px;
 	}
 </style>
 
@@ -62,4 +56,12 @@
 		<figcaption class="allowed-class disallowed-class" data-validation-allow="Allowed attribute"
 			data-validation-disallow="Disallowed attribute" style="color: red">Image caption</figcaption>
 	</figure>
+
+	<p>
+		<a href="./" class="image allowed-class disallowed-class" data-validation-allow="Allowed attribute"
+			data-validation-disallow="Disallowed attribute" style="color: red">
+			<img src="./sample.jpg" class="allowed-class disallowed-class" data-validation-allow="Allowed attribute"
+				data-validation-disallow="Disallowed attribute" style="color: red">
+		</a>
+	</p>
 </div>
